add nft floor price monitor
