# internal/api/routers/router.go
@@ -7,6 +7,7 @@ import (
 	"github.com/ka1fe1/crypto-monitoring/internal/api/handlers"
 	"github.com/ka1fe1/crypto-monitoring/internal/service"
 	"github.com/ka1fe1/crypto-monitoring/pkg/utils"
+	"github.com/ka1fe1/crypto-monitoring/pkg/utils/opensea"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
@@ -24,6 +25,10 @@ func SetupRouter(cfg *config.Config) *gin.Engine {
 	tokenService := service.NewTokenService(cmcClient)
 	tokenHandler := handlers.NewTokenHandler(tokenService)
 
+	openSeaClient := opensea.NewOpenSeaClient(cfg.OpenSea.APIKey)
+	openSeaService := service.NewOpenSeaService(openSeaClient, cmcClient)
+	openSeaHandler := handlers.NewOpenSeaHandler(openSeaService, cfg.NFTFloorPriceMonitor.NFTCollections)
+
 	// Register routes
 	r.GET("/ping", handlers.PingHandler)
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
@@ -32,6 +37,7 @@ func SetupRouter(cfg *config.Config) *gin.Engine {
 	{
 		api.GET("/dex/pair", dexPairHandler.GetDexPair)
 		api.GET("/token/price", tokenHandler.GetTokenPrice)
+		api.GET("/nft/floor_price", openSeaHandler.GetNFTFloorPrice)
 	}
 
 	return r
